--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surface Project — Architectural Surface Systems in Singapore</title>
+    <title>Plain Work | Architectural & Specialty Surface Systems Singapore</title>
     <meta name="description"
-        content="Surface Project designs and executes architectural surface systems in Singapore—including lime paint, microcement, liquid metal, and high-performance industrial coatings. Specified for durability and material behavior.">
+        content="Plain Work designs and executes architectural surface systems in Singapore—including lime paint, microcement, liquid metal, and high-performance industrial coatings. Specified for durability and material behavior.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +20,149 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- Open Graph / Social -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://plainwork.sg/">
+    <meta property="og:title" content="Plain Work — Architectural Surface Systems in Singapore">
+    <meta property="og:description"
+        content="Bespoke architectural surface systems—lime paint, microcement, and specialty finishes. Specified for material behavior and environment.">
+    <meta property="og:image" content="https://plainwork.sg/assets/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://plainwork.sg/">
+    <meta property="twitter:title" content="Plain Work — Architectural Surface Systems in Singapore">
+    <meta property="twitter:description"
+        content="Bespoke architectural surface systems—lime paint, microcement, and specialty finishes.">
+    <meta property="twitter:image" content="https://plainwork.sg/assets/og-image.jpg">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Plain Work",
+      "image": "https://plainwork.sg/assets/hero-bg.png",
+      "@id": "https://plainwork.sg/",
+      "url": "https://plainwork.sg/",
+      "telephone": "+6512345678",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Singapore",
+        "addressLocality": "Singapore",
+        "addressCountry": "SG"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 1.3521,
+        "longitude": 103.8198
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "00:00",
+        "closes": "23:59"
+      },
+      "sameAs": [
+        "https://www.instagram.com/plainwork"
+      ],
+      "description": "Plain Work designs and executes architectural surface systems in Singapore—including lime paint, microcement, liquid metal, and high-performance industrial coatings."
+    }
+    </script>
+
+    <!-- Service Schema for Search Dominance -->
+    <script type="application/ld+json">
+    [{
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Lime Paint Singapore",
+      "serviceType": "Mineral Paint Application",
+      "areaServed": { "@type": "City", "name": "Singapore" },
+      "description": "Professional application of breathable lime paint systems for residential and commercial interiors in Singapore."
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Microcement Singapore",
+      "serviceType": "Seamless Coating",
+      "areaServed": { "@type": "City", "name": "Singapore" },
+      "description": "Seamless microcement floor and wall systems for bathrooms, kitchens, and architectural spaces."
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Lime Plaster Singapore",
+      "serviceType": "Artisanal Plastering",
+      "areaServed": { "@type": "City", "name": "Singapore" },
+      "description": "Hand-applied Venetian and mineral plaster finishes for architectural feature walls."
+    }]
+    </script>
+
+    <!-- FAQ Schema Stacking -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Is lime paint suitable for Singapore’s humidity?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, when specified correctly. Lime-based finishes are naturally breathable, allowing moisture to release rather than trap it. However, they are not a substitute for structural waterproofing."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you provide 'normal' painting services?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We do not provide standard budget painting. We execute Architectural Paint Systems which include moisture testing and substrate-specific priming for long-term material behavior."
+          }
+        }
+      ]
+    }
+    </script>
+
+    <!-- HowTo Schema (Process) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HowTo",
+      "name": "How Plain Work Executes architectural Surface Systems",
+      "step": [
+        {
+          "@type": "HowToStep",
+          "name": "Consultation",
+          "text": "Request a consultation to discuss environment and substrate conditions."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Assessment",
+          "text": "On-site surface evaluation and feasibility review to determine the correct system."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Sampling",
+          "text": "Creation of physical samples or mock-ups for aesthetic and material behavior approval."
+        },
+        {
+          "@type": "HowToStep",
+          "name": "Application",
+          "text": "Technical execution, controlled curing, and final handover of the surface system."
+        }
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -27,7 +170,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container nav-wrapper">
-            <a href="#" class="brand-logo">Surface Project</a>
+            <a href="#" class="brand-logo">Plain Work</a>
 
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -51,10 +194,10 @@
         </div>
         <div class="hero-content">
             <span class="hero-tag">Architectural Surface Systems</span>
-            <h1>Surface Project — <br><em>Specified for the Environment</em></h1>
-            <p>Surface Project designs and executes architectural surface systems — including mineral finishes,
-                cementitious coatings, polymeric systems, and specialty surfaces — specified according to environment,
-                substrate condition, and long-term material behaviour.</p>
+            <h1>Plain Work — <br><em>Specialty Surface Systems Singapore</em></h1>
+            <p>Plain Work designs and executes architectural surface systems in Singapore—including lime paint,
+                microcement, and liquid metal. We specify finishes based on substrate condition, humidity, and long-term
+                material behavior to ensure durability in tropical environments.</p>
             <div class="hero-subtext">
                 <p><strong>We do not sell paint. We specify and apply the correct surface system.</strong></p>
             </div>
@@ -85,7 +228,7 @@
                 </div>
             </div>
             <div class="qualification-footer mt-md">
-                <p>Surface Project evaluates these factors before recommending any surface finish. This prevents
+                <p>Plain Work evaluates these factors before recommending any surface finish. This prevents
                     premature failure, disputes, and unnecessary rework.</p>
             </div>
         </div>
@@ -101,7 +244,8 @@
 
             <div class="services-grid large-grid">
                 <!-- 1. Lime Paint Systems -->
-                <div class="service-card dark">
+                <div class="service-card dark" onclick="window.location.href='lime-paint.html'"
+                    style="cursor: pointer;">
                     <h3>Lime Paint Systems</h3>
                     <p>Breathable mineral paint systems that allow walls to release moisture rather than trap it.</p>
                     <ul class="check-list">
@@ -109,10 +253,12 @@
                         <li>Not suitable for: wet areas, heavy abrasion</li>
                     </ul>
                     <span class="note">Specified only after surface assessment.</span>
+                    <a href="lime-paint.html" class="link-arrow">Lime Paint Singapore &rarr;</a>
                 </div>
 
                 <!-- 2. Lime Plaster Systems -->
-                <div class="service-card dark">
+                <div class="service-card dark" onclick="window.location.href='lime-plaster.html'"
+                    style="cursor: pointer;">
                     <h3>Lime Plaster Systems</h3>
                     <p>Hand-applied mineral plasters creating depth, tactility, and architectural presence.</p>
                     <ul class="check-list">
@@ -120,34 +266,41 @@
                         <li>Samples mandatory</li>
                         <li>Natural variation is inherent</li>
                     </ul>
+                    <a href="lime-plaster.html" class="link-arrow">Lime Plaster Singapore &rarr;</a>
                 </div>
 
                 <!-- 3. Microcement Systems -->
-                <div class="service-card dark">
+                <div class="service-card dark" onclick="window.location.href='microcement.html'"
+                    style="cursor: pointer;">
                     <h3>Microcement Systems</h3>
                     <p>Seamless cement-based coatings for walls and floors in dry and wet areas.</p>
                     <ul class="check-list">
                         <li>Best for: bathrooms, kitchens</li>
                         <li>System selection depends on moisture and detailing</li>
                     </ul>
+                    <a href="microcement.html" class="link-arrow">Microcement Singapore &rarr;</a>
                 </div>
 
                 <!-- 4. Liquid Metal Systems -->
-                <div class="service-card dark">
+                <div class="service-card dark" onclick="window.location.href='liquid-metal.html'"
+                    style="cursor: pointer;">
                     <h3>Liquid Metal Systems</h3>
                     <p>Real metal-infused plasters that oxidise, patina, and evolve over time.</p>
                     <p>Available: water-based, nano-based, resin-based.</p>
                     <span class="note">Samples mandatory. Exact replication not possible.</span>
+                    <a href="liquid-metal.html" class="link-arrow">Learn More &rarr;</a>
                 </div>
 
                 <!-- 5. Patina & Oxidised Finishes -->
-                <div class="service-card dark">
+                <div class="service-card dark" onclick="window.location.href='patina-oxidised.html'"
+                    style="cursor: pointer;">
                     <h3>Patina & Oxidised Finishes</h3>
                     <p>Controlled ageing, rust, and oxidation effects using mineral and metal-based systems.</p>
                     <ul class="check-list">
                         <li>Best for: expressive, industrial applications</li>
                         <li>Material behaviour part of aesthetic</li>
                     </ul>
+                    <a href="patina-oxidised.html" class="link-arrow">Learn More &rarr;</a>
                 </div>
 
                 <!-- 6. Industrial Epoxy & Polyurethane -->
@@ -334,13 +487,41 @@
     </section>
 
     <!-- Footer -->
-    <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
-        <div class="container text-center">
-            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Project</h3>
-            <p style="opacity: 0.7; margin-bottom: 2rem;">Designing and executing architectural surface systems in
-                Singapore.</p>
-            <div style="opacity: 0.5; font-size: 0.9rem;">
-                &copy; 2026 Surface Project. All rights reserved.
+    <footer class="site-footer">
+        <div class="container footer-grid">
+            <div class="footer-column branding">
+                <a href="index.html" class="footer-logo">Plain Work</a>
+                <p>Designing and executing architectural surface systems in Singapore. Specified for the environment.
+                </p>
+            </div>
+            <div class="footer-column">
+                <h4>Systems</h4>
+                <ul class="footer-links">
+                    <li><a href="lime-paint.html">Lime Paint Singapore</a></li>
+                    <li><a href="microcement.html">Microcement Singapore</a></li>
+                    <li><a href="lime-plaster.html">Lime Plaster Singapore</a></li>
+                    <li><a href="liquid-metal.html">Liquid Metal</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Company</h4>
+                <ul class="footer-links">
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Connect</h4>
+                <ul class="footer-links">
+                    <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                    <li><a href="https://wa.me/6512345678" target="_blank">WhatsApp</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2026 Plain Work. All rights reserved.</p>
             </div>
         </div>
     </footer>
