--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Surface Project Singapore</title>
+    <title>About Us | Plain Work Singapore</title>
     <meta name="description"
-        content="Learn about Surface Project - our story, approach to mineral finishes, and warranty coverage for lime paint, microcement, and lime plaster applications.">
+        content="Learn about Plain Work - our story, approach to mineral finishes, and warranty coverage for lime paint, microcement, and lime plaster applications.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +20,25 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- JSON-LD Structured Data (Breadcrumbs) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Plain Work",
+        "item": "https://plainwork.sg/index.html"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "About Us",
+        "item": "https://plainwork.sg/about.html"
+      }]
+    }
+    </script>
 </head>
 
 <body>
@@ -27,7 +46,7 @@
     <!-- Header -->
     <header class="site-header">
         <div class="container nav-wrapper">
-            <a href="index.html" class="brand-logo">Surface Project</a>
+            <a href="index.html" class="brand-logo">Plain Work</a>
 
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -52,6 +71,12 @@
         style="position: relative; padding: calc(var(--spacing-2xl) + 80px) 0 var(--spacing-2xl); background: linear-gradient(135deg, #e6e2d6 0%, #d8d4c8 100%);">
 
         <div class="container" style="position: relative; z-index: 1;">
+            <nav aria-label="Breadcrumb">
+                <ul class="breadcrumbs">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="current">About Us</li>
+                </ul>
+            </nav>
             <h1
                 style="color: var(--color-text-primary); font-size: clamp(3rem, 6vw, 5rem); margin-bottom: var(--spacing-md); text-align: center;">
                 About Us</h1>
@@ -76,7 +101,7 @@
                 Our Story</h2>
             <p class="section-intro"
                 style="text-align: center; font-size: 1.2rem; color: var(--color-text-secondary); max-width: 750px; margin: 0 auto var(--spacing-xl); line-height: 1.8; font-style: italic; text-shadow: 0 1px 4px rgba(255,255,255,0.9);">
-                Surface Project was founded on the belief that walls should do more than divide space—they should add
+                Plain Work was founded on the belief that walls should do more than divide space—they should add
                 character, texture, and depth to interiors.
             </p>
 
@@ -303,12 +328,41 @@
     </section>
 
     <!-- Footer -->
-    <footer style="background: #2c2c2c; color: #e6e2d6; padding: 4rem 0;">
-        <div class="container text-center">
-            <h3 style="color: #e6e2d6; margin-bottom: 2rem;">Surface Project</h3>
-            <p style="opacity: 0.7; margin-bottom: 2rem;">bringing texture to life in Singapore.</p>
-            <div style="opacity: 0.5; font-size: 0.9rem;">
-                &copy; 2026 Surface Project. All rights reserved.
+    <footer class="site-footer">
+        <div class="container footer-grid">
+            <div class="footer-column branding">
+                <a href="index.html" class="footer-logo">Plain Work</a>
+                <p>Designing and executing architectural surface systems in Singapore. Specified for the environment.
+                </p>
+            </div>
+            <div class="footer-column">
+                <h4>Systems</h4>
+                <ul class="footer-links">
+                    <li><a href="lime-paint.html">Lime Paint Singapore</a></li>
+                    <li><a href="microcement.html">Microcement Singapore</a></li>
+                    <li><a href="lime-plaster.html">Lime Plaster Singapore</a></li>
+                    <li><a href="liquid-metal.html">Liquid Metal</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Company</h4>
+                <ul class="footer-links">
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Connect</h4>
+                <ul class="footer-links">
+                    <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                    <li><a href="https://wa.me/6512345678" target="_blank">WhatsApp</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2026 Plain Work. All rights reserved.</p>
             </div>
         </div>
     </footer>
