--- a/patina-oxidised.html
+++ b/patina-oxidised.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microcement Singapore | Seamless Floor & Wall Coatings | Plain Work</title>
+    <title>Patina & Oxidised Finishes | Plain Work Singapore</title>
     <meta name="description"
-        content="Seamless microcement floor and wall systems in Singapore. Waterproof, heat-resistant, and hand-applied architectural coatings for bathrooms, kitchens, and contemporary interiors.">
+        content="Controlled ageing, rust, and oxidation effects using mineral and metal-based systems. Expressive industrial applications for architectural surfaces.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,9 +38,9 @@
         "item": "https://plainwork.sg/index.html#systems"
       },{
         "@type": "ListItem",
-        "position": 1,
-        "name": "Microcement",
-        "item": "https://plainwork.sg/microcement.html"
+        "position": 3,
+        "name": "Patina & Oxidised",
+        "item": "https://plainwork.sg/patina-oxidised.html"
       }]
     }
     </script>
@@ -50,8 +50,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "name": "Microcement Systems",
-      "serviceType": "Seamless Architectural Coating",
+      "serviceType": "Patina & Oxidised Finishes",
       "provider": {
         "@type": "LocalBusiness",
         "name": "Plain Work",
@@ -61,10 +60,10 @@
         "@type": "Country",
         "name": "Singapore"
       },
-      "description": "Hand-applied cementitious coatings for continuous, seamless surfaces on floors, walls, and wet areas. Engineered for durability, moisture resistance, and architectural depth.",
+      "description": "Controlled ageing, rust, and oxidation effects using mineral and metal-based systems. Expressive industrial applications for architectural surfaces.",
       "offers": {
         "@type": "Offer",
-        "description": "Technical specification and execution following moisture assessment."
+        "description": "Bespoke application. Reactive material behavior."
       }
     }
     </script>
@@ -86,11 +85,8 @@
             <nav class="nav-links">
                 <a href="about.html">About Us</a>
                 <a href="index.html#services">Services</a>
-                <a href="#gallery">Gallery</a>
                 <a href="faq.html">FAQ</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="index.html#contact" class="btn" style="padding: 0.5rem 1.5rem; font-size: 0.8rem;">Get
-                    Quote</a>
+                <a href="index.html#contact" class="btn btn-small">Consultation</a>
             </nav>
         </div>
     </header>
@@ -102,89 +98,67 @@
                 <ul class="breadcrumbs">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#systems">Systems</a></li>
-                    <li class="current">Microcement</li>
+                    <li class="current">Patina & Oxidised</li>
                 </ul>
             </nav>
-            <h1>Microcement</h1>
+            <h1>Patina & Oxidised</h1>
             <p class="hero-intro">
-                Microcement is a high-performance architectural coating composed of cement, water-based resins, and
-                mineral pigments. It creates a seamless, joint-free surface that is waterproof and heat-resistant,
-                making it a superior choice for bathrooms, kitchens, and floors in modern Singaporean interiors.
+                Capturing the beauty of time through controlled chemical reactions.
+                Our patina finishes transform metallic and mineral surfaces into expressive, industrial statements.
             </p>
         </div>
     </section>
 
-    <!-- Microcement Systems Section -->
+    <!-- Finish Types Section -->
     <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
         <div class="container">
-            <h2>Microcement Systems</h2>
+            <h2>Reactive Systems</h2>
+            <p class="section-intro">Engineered finishes that utilize natural oxidation for unique visual results.</p>
 
             <div class="option-grid-large">
                 <div class="option-card-large">
-                    <img src="images/system-standard-microcement.png" alt="Standard Microcement Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Standard Microcement</h3>
-                    <p>A cement-based system suitable for walls and dry interior areas, offering controlled texture and
-                        a clean finish.</p>
+                    <h3>Rust & Corten Effects</h3>
+                    <p>Iron-based systems that develop authentic rust textures. Available in various stages of oxidation
+                        from light orange to deep charred reds.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <img src="images/system-reinforced-microcement.png" alt="Reinforced Microcement Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Reinforced Microcement</h3>
-                    <p>A multi-layer system with additional reinforcement for wet areas and floors. Requires substrate
-                        and moisture assessment.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Finish Options Section -->
-    <section class="detail-content-section section-padding">
-        <div class="container">
-            <h2>Finish Options</h2>
-
-            <div class="option-grid-large">
-                <div class="option-card-large">
-                    <img src="images/microcement-fine.png" alt="Fine Cement Finish Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Fine Cement</h3>
-                    <p>Light texture with a smooth, modern appearance.</p>
+                    <h3>Vertigris & Verdigrease</h3>
+                    <p>Copper and bronze oxidation creating iconic blue-green mineral deposits. Best for architectural
+                        accents and exterior features.</p>
                 </div>
 
                 <div class="option-card-large">
-                    <img src="images/microcement-industrial.png" alt="Industrial Finish Texture"
-                        style="width: 100%; height: 350px; object-fit: cover; border-radius: var(--radius-sm); margin-bottom: 1rem;">
-                    <h3>Industrial</h3>
-                    <p>More pronounced movement with a raw, architectural feel.</p>
+                    <h3>Mottled Patinas</h3>
+                    <p>Multi-layered mineral washes applied to metallic bases to create depth, clouding, and aged
+                        variations without full oxidation.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Suitability Section -->
-    <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
+    <section class="detail-content-section section-padding">
         <div class="container">
             <h2>Suitability</h2>
-
             <div class="suitability-grid">
                 <div class="suitability-column suitable">
                     <h3>Suitable for</h3>
                     <ul>
-                        <li>Contemporary interiors</li>
-                        <li>Seamless floor-to-wall applications</li>
-                        <li>Bathrooms (with proper waterproofing)</li>
-                        <li>Commercial spaces</li>
+                        <li>Expressive feature walls</li>
+                        <li>Industrial-themed interiors</li>
+                        <li>Retail & Bar environments</li>
+                        <li>Durable exterior cladding</li>
                     </ul>
                 </div>
 
                 <div class="suitability-column not-suitable">
                     <h3>Not recommended for</h3>
                     <ul>
-                        <li>DIY application</li>
-                        <li>Surfaces without proper substrate prep</li>
-                        <li>Clients expecting instant quotes</li>
-                        <li>Projects without moisture assessment</li>
+                        <li>Clinical, sanitised environments</li>
+                        <li>Surfaces requiring precise color-matching</li>
+                        <li>Clients uncomfortable with material evolution</li>
+                        <li>Budget "standard" painting projects</li>
                     </ul>
                 </div>
             </div>
@@ -192,12 +166,11 @@
     </section>
 
     <!-- Disclaimer Section -->
-    <section class="detail-content-section section-padding">
+    <section class="detail-content-section section-padding" style="background: var(--color-bg-secondary);">
         <div class="container">
-
             <div class="detail-note-large">
-                <p><strong>Microcement requires onsite assessment and substrate evaluation. Quoted separately.</strong>
-                </p>
+                <p><strong>Patina finishes are inherently unpredictable. We guide the direction of the reaction, but the
+                        final outcome is determined by material behavior. No two walls are ever identical.</strong></p>
             </div>
 
             <div class="detail-cta-large">
@@ -253,8 +226,7 @@
 
     <!-- Floating WhatsApp -->
     <a href="https://wa.me/6512345678" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
-        <svg xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 448 512"><!-- Font Awesome Free 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
                 d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.5 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" />
         </svg>
@@ -263,7 +235,6 @@
     <!-- Scripts -->
     <script src="js/app.js"></script>
     <script>
-        // Start Lucide Icons
         lucide.createIcons();
     </script>
 </body>
