--- a/lime-paint.html
+++ b/lime-paint.html
@@ -216,6 +216,58 @@
         </div>
     </section>
 
+    <!-- Pricing Section -->
+    <section class="detail-content-section section-padding" id="pricing">
+        <div class="container">
+            <h2>Lime Wash Pricing</h2>
+            <p class="section-intro">Transparent, flat-rate pricing for HDB lime wash (walls only). No hidden costs — what you see is what you pay.</p>
+
+            <div class="pricing-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 2.5rem;">
+
+                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">2-Room HDB</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,000</div>
+                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
+                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $300 with ceiling</div>
+                </div>
+
+                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">3-Room HDB</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,200</div>
+                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
+                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $400 with ceiling</div>
+                </div>
+
+                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">4-Room HDB</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,500</div>
+                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
+                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $500 with ceiling</div>
+                </div>
+
+                <div class="pricing-card" style="border: 1px solid var(--color-border, #e0dbd4); border-radius: var(--radius-sm); padding: 2rem 1.5rem; text-align: center; background: var(--color-bg-secondary);">
+                    <div style="font-size: 0.75rem; letter-spacing: 0.12em; text-transform: uppercase; opacity: 0.6; margin-bottom: 0.5rem;">5-Room HDB</div>
+                    <div style="font-size: 2.2rem; font-weight: 600; margin-bottom: 0.25rem;">$1,800</div>
+                    <div style="font-size: 0.85rem; opacity: 0.65; margin-bottom: 1.25rem;">Walls only</div>
+                    <div style="font-size: 0.8rem; padding: 0.5rem 0.75rem; background: var(--color-bg); border-radius: 4px; opacity: 0.85;">+ $600 with ceiling</div>
+                </div>
+
+            </div>
+
+            <div style="margin-top: 2rem; padding: 1.25rem 1.5rem; border-left: 3px solid var(--color-text-secondary, #a09070); background: var(--color-bg-secondary); border-radius: 0 var(--radius-sm) var(--radius-sm) 0;">
+                <p style="margin: 0; font-size: 0.85rem; opacity: 0.8;">
+                    <strong>Includes:</strong> Surface preparation, 2 coats of lime wash, material &amp; labour.<br>
+                    <strong>Excludes:</strong> Hacking, plastering, or repair of damaged walls. Rates apply to standard HDB units in good condition.<br>
+                    <strong>Note:</strong> Pricing is for lime wash only. Other finishes are quoted separately.
+                </p>
+            </div>
+
+            <div style="text-align: center; margin-top: 2.5rem;">
+                <a href="index.html#contact" class="btn">Get a Free Quote</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Disclaimer Section -->
     <section class="detail-content-section section-padding">
         <div class="container">
